manifests/production/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gridfire-prod
  labels:
    goldilocks.fairwinds.com/enabled: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: goldilocks
