manifests/production/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: gridfire-prod
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: csleary/gridfire-api:2d81b121ff0ad2594c5af74cf0000c9c83c105f5
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: 500Mi
              cpu: 25m
            limits:
              memory: 1Gi
              cpu: 500m
          startupProbe:
            httpGet:
              path: /livez
              port: 5000
          livenessProbe:
            httpGet:
              path: /livez
              port: 5000
          readinessProbe:
            httpGet:
              path: /readyz
              port: 5000
      imagePullSecrets:
        - name: regcred
