manifests/production/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: gridfire-prod
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: csleary/gridfire-client:2d81b121ff0ad2594c5af74cf0000c9c83c105f5
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 128Mi
              cpu: 25m
            limits:
              memory: 1Gi
              cpu: 500m
      imagePullSecrets:
        - name: regcred
