manifests/production/dispatcher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatcher
  namespace: gridfire-prod
  labels:
    app: dispatcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatcher
  template:
    metadata:
      labels:
        app: dispatcher
    spec:
      containers:
        - name: dispatcher
          image: csleary/gridfire-web3-dispatcher
          imagePullPolicy: Always
          resources:
            requests:
              memory: 263M
              cpu: 25m
            limits:
              memory: 263M
              cpu: 25m
          ports:
            - containerPort: 9090
          startupProbe:
            tcpSocket:
              port: 9090
          readinessProbe:
            tcpSocket:
              port: 9090
          livenessProbe:
            tcpSocket:
              port: 9090
      imagePullSecrets:
        - name: regcred
