manifests/production/events.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events
  namespace: gridfire-prod
  labels:
    app: events
spec:
  replicas: 2
  selector:
    matchLabels:
      app: events
  template:
    metadata:
      labels:
        app: events
    spec:
      containers:
        - name: events
          image: csleary/gridfire-web3-events
          imagePullPolicy: Always
          resources:
            requests:
              memory: 128Mi
              cpu: 25m
            limits:
              memory: 1.5Gi
              cpu: 1000m
          ports:
            - containerPort: 9090
          startupProbe:
            tcpSocket:
              port: 9090
          readinessProbe:
            tcpSocket:
              port: 9090
          livenessProbe:
            tcpSocket:
              port: 9090
      imagePullSecrets:
        - name: regcred
      tolerations:
        - key: "key1"
          operator: "Equal"
          value: "workers"
          effect: "NoSchedule"
