manifests/production/ipfs-node.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ipfs-node
  namespace: gridfire-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipfs-node
  serviceName: ipfs-node
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: ipfs-node
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: ipfs-node
          image: csleary/ipfs-node
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
            - containerPort: 5001
            - containerPort: 8080
          resources:
            requests:
              memory: 263M
              cpu: 25m
            limits:
              memory: 263M
              cpu: 25m
          volumeMounts:
            - name: ipfs-data
              mountPath: /data/ipfs
      imagePullSecrets:
        - name: regcred
  volumeClaimTemplates:
    - metadata:
        name: ipfs-data
      spec:
        accessModes: ["ReadWriteOncePod"]
        storageClassName: hcloud-volumes
        resources:
          requests:
            storage: 5Gi
