manifests/production/web3-events.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gridfire-web3-events
  namespace: gridfire-prod
  labels:
    app: gridfire-web3-events
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gridfire-web3-events
  template:
    metadata:
      labels:
        app: gridfire-web3-events
    spec:
      containers:
        - name: gridfire-web3-events
          image: csleary/gridfire-web3-events
          imagePullPolicy: Always
          resources:
            requests:
              memory: 128Mi
              cpu: 25m
            limits:
              memory: 1.5Gi
              cpu: 1000m
          ports:
            - containerPort: 9090
          startupProbe:
            tcpSocket:
              port: 9090
          readinessProbe:
            tcpSocket:
              port: 9090
          livenessProbe:
            tcpSocket:
              port: 9090
      imagePullSecrets:
        - name: regcred
