manifests/production/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: gridfire-prod
  labels:
    app: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: csleary/gridfire-worker:44562c8a65978997f047d68f67944aeef0207429
          imagePullPolicy: Always
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 2Gi
              cpu: "1.5"
          ports:
            - containerPort: 9090
          startupProbe:
            tcpSocket:
              port: 9090
          readinessProbe:
            tcpSocket:
              port: 9090
          livenessProbe:
            tcpSocket:
              port: 9090
      imagePullSecrets:
        - name: regcred
      tolerations:
        - key: "key1"
          operator: "Equal"
          value: "workers"
          effect: "NoSchedule"
