manifests/production/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: gridfire-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/default-backend: client
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
    nginx.ingress.kubernetes.io/use-gzip: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gridfire.app
      secretName: tls-secret
  rules:
    - host: gridfire.app
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5000
            path: /api
          - pathType: Prefix
            backend:
              service:
                name: ipfs-node
                port:
                  number: 8080
            path: /ipfs
          - pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
            path: /
